# at32-gcc-template

./: .gitlab-ci.yml  .gitmodules  AT32F403AxG_FLASH-app-bootloaded.ld  AT32F403AxG_FLASH_bootloader.ld  CMakeLists.txt  JLinkDevices.xml  README.md  README.rst  git_ver.py  git_ver.sh  h_git_ver.inja  package-lock.json  runRemoteJlinkGDB.sh
User/: main.cpp
User/Inc/: esp_err.h  lv_conf.h  pindef.h  sdkconfig.h  user_conf.h
User/Src/gui/font/mcu_font_config/: strings.yaml
User/Src/gui/font/src/: font_icon.c  font_ui.c  font_ui_16.c  font_ui_20.c  font_ui_big.c  stringtable.cpp  stringtable.h
User/Src/hardware/onchip/: gpio.cpp  gpio.h
User/Src/hardware/peripheral/: gc9a01_cmd.h  lcd.cpp  lcd.h  lv_port_disp.cpp  lv_port_disp.h
User/Src/utils/: log.cpp  rtc.cpp  rtc.h
bootloader/: .gitignore  esp32-hal-log.h  esp_log.h  flash.h  log.cpp  main.cpp  readme.rst  sdkconfig.h
lib/SeggerRTT/Config/: SEGGER_RTT_Conf.h
lib/cmsis/dsp/ComputeLibrary/Source/: arm_cl_tables.c
lib/cmsis/dsp/PrivateInclude/: arm_sorting.h  arm_vec_fft.h  arm_vec_filtering.h
lib/cmsis/dsp/include/: arm_math.h  arm_vec_math.h
lib/core/: at32f403a_407_board.h  at32f403a_407_clock.c  at32f403a_407_clock.h  at32f403a_407_conf.h  at32f403a_407_int.cpp  at32f403a_407_int.h
lib/freertos/config/: FreeRTOSConfig.h
lib/freertos/source/: tasks.c
lib/freertos/source/include/: FreeRTOS.h  portmacro.h  queue.h  task.h
lib/freertos/source/portable/GCC/ARM_CM4F/: port.c
